--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section {
     left: 0;
     width: 0;
     height: 100%;
-    border-right: 2px solid #dbae58;
+    border-right: 2px solid ;
     z-index: -1;
     animation: homeCursorText 6s linear infinite;
     animation-delay: 2s;
@@ -696,7 +696,7 @@ span {
         left: -100%;
         width: 100%;
         padding: 1rem 4%;
-        background: transparent;
+        background: var(--bg-color);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
         z-index: 1;
         transition: .25s ease;
@@ -712,9 +712,9 @@ span {
         position: absolute;
         top: 0;
         left: -100;
-        width: 100%;
+        width: 30%;
         height: 100%;
-        background: transparent;
+        background:var(--bg-color);
         border-top: .1rem solid rgba(0, 0, 0, .2);
         z-index: -1;
         transition: .25s ease;
